# SandboxServer

./: CMakeLists.txt  README.md
src/: BasicTypes.h  CMakeLists.txt  NaiveServerComponents.cpp  NaiveServerComponents.h  SelfCLosing.h  main.cpp
test-client/: main.cpp
tests/: BasicTypesTests.cpp  CMakeLists.txt  NaiveServerComponentsTests.cpp
